feat: notfication firebase and auth firebase by firebase token id
