# internal/domain/model/user_model.go
@@ -12,7 +12,8 @@ type User struct {
 	Name             string            `gorm:"not null" json:"name"`
 	Email            string            `gorm:"uniqueIndex;not null" json:"email"`
 	Password         string            `gorm:"not null" json:"-"`
-	Role             string            `gorm:"default:user;not null" json:"role"`
+	FirebaseUID      string            `gorm:"uniqueIndex" json:"firebase_uid"`
+	Role             string            `gorm:"uniqueIndex" json:"role"`
 	RoleId           uint              `gorm:"default:1;not null" json:"role_id"`
 	VerifiedEmail    bool              `gorm:"default:false;not null" json:"verified_email"`
 	CreatedAt        time.Time         `gorm:"autoCreateTime:milli" json:"-"`
